<resources>
    <string name="app_name">Forest Fire</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--API-KEY for Address-->
    <string name="api_key">AIzaSyDUttA5xDk2MZrdBqrTV9BNdlbYeBH02PA</string>
    <string name="low">LOW</string>
    <string name="med">MEDIUM</string>
    <string name="hig">HIGH</string>
    <string name="very_high">VERY-HIGH</string>
    <string name="past_alerts">Past Alerts</string>
    <string name="login_screen_welcome">Welcome\nPlease Log-in to continue</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password_reset">Forgot password?\nReset</string>
    <string name="don_t_have_account_sign_up">Don\'t have account?\nSign Up</string>
    <string name="forest_fire">Forest Fire</string>
    <string name="please_update_your_profile">Please update your profile:</string>
    <string name="personal_information">Personal Information</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="plot_number">Plot number</string>
    <string name="lane">Lane</string>
    <string name="locality">Locality</string>
    <string name="pin_code">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">country</string>
    <string name="save">Save</string>
    <string name="user_photo">user_photo</string>
    <string name="please_enter_your_email_to_reset_password">Please enter your email to reset password</string>
    <string name="username">username</string>
    <string name="reset_password">Reset password</string>
    <string name="go_back">Go back</string>
    <string name="welcome_please_sign_up_to_continue">Welcome\nPlease sign up to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="message">Message -</string>
    <string name="send">SEND</string>
    <string name="describe_the_problems_you_are_facing">Describe the problems you are facing…</string>
    <string name="click_here_to_view_past_alerts">Click here to view past alerts—></string>
    <string name="intensity">Intensity</string>
    <string name="_00">00</string>
    <string name="altitude">Altitude</string>
    <string name="temperature">Temperature</string>
    <string name="date_and_time">Date and Time(Last)</string>
    <string name="humidity">Humidity</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="atmospheric_pressure">Atmospheric Pressure</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log-out</string>
    <string name="high">high</string>
    <string name="intensity_in_database"><![CDATA[Intensity--->]]></string>
    <string name="alt_unit_feet">feet</string>
    <string name="altitude_in_db">Altitude:</string>
    <string name="atm_press_unit_pa">pa</string>
    <string name="atmospheric_pressure_in_db">Atmospheric Pressure:</string>
    <string name="sm_unit_w">% h2o/w</string>
    <string name="soil_moisture_in_db">Soil Miosture:</string>
    <string name="humidity_unit">%</string>
    <string name="humidity_in_db">Humidity:</string>
    <string name="temp_unit_c">° C</string>
    <string name="temperature_in_db">Temperature:</string>
    <string name="forest_fire_prediction">Forest Fire Prediction</string>


    <!--    AutoComplete values-->
    <string-array name="states">
        <item>Maharashtra</item>
        <item>punjab</item>
        <item>Uttar Pradesh</item>
        <item>Rajasthan</item>
    </string-array>

</resources>
