<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_logo_img"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/login_screen_welcome"
        android:textAlignment="center"
        android:textColor="@color/color_text_welcome"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person_red_24dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_lgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_style"
        android:drawableEnd="@drawable/ic_trending_flat_white_24dp"
        android:text="@string/log_in"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_forgotPass"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/forgot_password_reset"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/don_t_have_account_sign_up"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>