<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/app_logo_img"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/please_enter_your_email_to_reset_password"
        android:textAlignment="center"
        android:textColor="@color/color_text_welcome"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="@color/hint_color"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_style"
        android:text="@string/reset_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_lgn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:text="@string/go_back"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textSize="28sp" />

    </LinearLayout>
</LinearLayout>