<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_name"
            android:contentDescription="@string/user_photo"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textColor="@color/black"
            android:textColorHint="#838080"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tarun Dadlani"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2016.tarun.dadlani@ves.ac.in"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/vPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8390106634"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/vOccupation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Student"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Address"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/vPlotLane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="72B, Collectors Colony Road"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vLocalityPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Chembur - 400047"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vCityStateCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Mumbai, Maharashtra, India"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonEdit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/back_color_1"
            android:textSize="20sp" />


        <Button
            android:id="@+id/buttonLOut"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/back_color_1"
            android:textSize="20sp"
            tools:targetApi="p" />

    </LinearLayout>